--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Mono:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
-    <title>Öncüm K. Yılmaz</title>
+    <title>ÖKY</title>
 </head>
 <body>
     <header class="header">
@@ -19,9 +19,10 @@
             <img src="IMG-20220320-WA0010.jpg" class="profile-img">
         </div>
         <div class="about-div">
-            <h2 class="about-h2">ABOUT</h2>
+            <h2 class="about-h2">ABOUT ME</h2>
             
-            <p class="about-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore tempora rerum, est autem cupiditate, corporis a qui libero ipsum delectus quidem dolor at nulla, adipisci veniam in reiciendis aut asperiores omnis blanditiis quod quas laborum nam! Fuga ad tempora in aspernatur pariatur fugit quibusdam dolores sunt esse magni, ut, dignissimos.</p>
+            <p class="about-text">I'm a Junior Software Developer. I'm mostly focused on backend development. Currently I'm interested in cloud computing. </p>
+            <p class="about-text">You can see me talking about new programming languages, modern web technologies, personal development, books and stock market. </p>
 
         </div>
     </div>
