--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
         </div>
     </div>
 
-    <!-- <div class="contact">
+    <div class="contact">
 
         <h2 class="contact-h2">CONTACT</h2>
         <div class="button-div">
-            <button>git</button>
-            <button>linkedin</button>
-            <button>mail</button>
+            <a href="https://github.com/yilmazoncum"><img src="mail.png" class="link-icon" style="width:50px;height:40px;"></a>
+            <a href="https://github.com/yilmazoncum"><img src="github.png" class="link-icon"style="width:50px;height:50px;"></a>
+            <a href="https://github.com/yilmazoncum"><img src="linkedin.png" class="link-icon"style="width:50px;height:50px;"></a>
         </div>
-    </div> -->
+    </div>
 
 </body>
 </html>
@@ -105,29 +105,27 @@
         }
       }
     
-
-
-
-
-
-
-
       
     .contact{
         color:aliceblue;
         height: 100vh;
         width: 98vw;
         text-align: center;
-        background-color: blueviolet;
     }
 
     .contact-h2{
         font-weight: 600;
         margin: 0 ;
+        font-size: 3vw;
+        padding-top: 20vh;
     }
 
     .button-div{
-        margin-top: 25vh ;
+        margin-top: 25vh;
+        text-align: center;
+    }
+    .link-icon{
+        padding: 5vw;
     }
 
     button{
