--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 
         <h2 class="contact-h2">CONTACT</h2>
         <div class="button-div">
-            <a href="https://github.com/yilmazoncum"><img src="mail.png" class="link-icon" style="width:50px;height:40px;"></a>
+            <a href="mailto: yilmazoncum@gmail.com"><img src="mail.png" class="link-icon" style="width:50px;height:40px;"></a>
             <a href="https://github.com/yilmazoncum"><img src="github.png" class="link-icon"style="width:50px;height:50px;"></a>
-            <a href="https://github.com/yilmazoncum"><img src="linkedin.png" class="link-icon"style="width:50px;height:50px;"></a>
+            <a href="https://www.linkedin.com/in/yilmazoncum/"><img src="linkedin.png" class="link-icon"style="width:50px;height:50px;"></a>
         </div>
     </div>
 
